// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePhoto /> renders custom size 1`] = `
<div
  className="inline-0-0-2-8"
>
  <img
    alt="Name"
    className="image-0-2-2 roundedImage-0-2-3 inline-0-0-2-9"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders inline 1`] = `
<div
  className="inline-0-2-1 regular-0-2-4"
>
  <img
    alt="Name"
    className="image-0-2-2 regular-0-2-4 roundedImage-0-2-3"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders large 1`] = `
<div
  className="regular-0-2-4 large-0-2-6"
>
  <img
    alt="Name"
    className="image-0-2-2 regular-0-2-4 roundedImage-0-2-3 large-0-2-6"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders macro 1`] = `
<div
  className="regular-0-2-4 macro-0-2-7"
>
  <img
    alt="Name"
    className="image-0-2-2 regular-0-2-4 roundedImage-0-2-3 macro-0-2-7"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders small 1`] = `
<div
  className="regular-0-2-4 small-0-2-5"
>
  <img
    alt="Name"
    className="image-0-2-2 regular-0-2-4 roundedImage-0-2-3 small-0-2-5"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;

exports[`<ProfilePhoto /> renders with the expected props (but not necessarily with the expected styles) 1`] = `
<div
  className="regular-0-2-4"
>
  <img
    alt="Name"
    className="image-0-2-2 regular-0-2-4 roundedImage-0-2-3"
    src="https://domain.com/some/file.jpg"
    title="Name"
  />
</div>
`;
